Notebooks first draft

--- a/src/Short_notebook_1.ipynb
+++ b/src/Short_notebook_1.ipynb
@@ -1,6 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Team [7] Oceanwarlock"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install xgboost\n",
+    "%pip install scikit-learn\n",
+    "%pip install pandas\n",
+    "%pip install numpy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -27,8 +46,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import re\n",
-    "from datetime import timedelta\n",
+    "from datetime import timedelta, datetime\n",
     "from collections import deque\n",
     "import xgboost as xgb\n",
     "from xgboost import plot_importance, plot_tree\n",
@@ -38,14 +56,7 @@
     "simplefilter(action=\"ignore\", category=pd.errors.PerformanceWarning)\n",
     "simplefilter(action=\"ignore\", category=FutureWarning)\n",
     "simplefilter(action=\"ignore\", category=UserWarning)\n",
-    "from sklearn.model_selection import RandomizedSearchCV, TimeSeriesSplit\n",
-    "\n",
-    "import loadBar\n",
-    "#from csv_parser import CSVParser\n",
-    "from globals import RESOURCE_FOLDER, STEPSIZES, OUTPUT_WINDOW, INPUT_WINDOW, OUTPUT_FORECAST, DELETEABLE_COLUMNS, ONE_HOT_COLUMNS\n",
-    "from feature_engineer import FeatureEngineer\n",
-    "from exploring_data_functions import *\n",
-    "\n"
+    "from sklearn.model_selection import RandomizedSearchCV, TimeSeriesSplit"
    ]
   },
   {
@@ -54,7 +65,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RESOURCE_FOLDER=\"../../Project materials(1)\"  #Put in y"
+    "def load_bar(n, i):\n",
+    "    if n<=i:\n",
+    "        print(\"[====================] 100.0% complete\")\n",
+    "        return\n",
+    "    progress = i / n\n",
+    "    bar_length = 20\n",
+    "    filled_length = int(progress * bar_length)\n",
+    "\n",
+    "    bar = '=' * filled_length + '-' * (bar_length - filled_length)\n",
+    "    percentage = (float(progress)*1000000)//100/100\n",
+    "\n",
+    "    print(f'[{bar}] {percentage}% complete', end='\\r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RESOURCE_FOLDER=\"PUT IN PATH TO THE FOLDER CONTAINING TRAINING DATA HERE\""
    ]
   },
   {
@@ -72,13 +103,8 @@
     "\n",
     "    def parse_time(self,raw_time):\n",
     "        try:\n",
-    "            # Define the format without the year\n",
     "            date_format = \"%m-%d %H:%M\"\n",
-    "        \n",
-    "            # Parse the cleaned string into a datetime object\n",
     "            parsed_datetime = datetime.strptime(raw_time, date_format)\n",
-    "\n",
-    "            # Add placeholder year 2024.\n",
     "\n",
     "            return parsed_datetime.replace(year = 2024)\n",
     "        \n",
@@ -104,37 +130,12 @@
     "        df_ports=df_ports.drop(['name', 'portLocation', 'countryName', 'longitude', 'latitude'], axis = 1)\n",
     "        return df_ports\n",
     "\n",
-    "    def retrieve_schedules(self,path):\n",
-    "        df_schedules = pd.read_csv(path, sep='|')\n",
-    "        df_schedules['sailingDate'] = pd.to_datetime(df_schedules['sailingDate'])\n",
-    "        df_schedules['arrivalDate'] = pd.to_datetime(df_schedules['arrivalDate'])\n",
-    "\n",
-    "        df_schedules=df_schedules.drop(['shippingLineName', 'portName', 'portLongitude', 'portLatitude'], axis = 1)\n",
-    "        return df_schedules\n",
-    "\n",
-    "    def retrieve_vessels(self,path):\n",
-    "        df_vessels = pd.read_csv(path, sep='|')\n",
-    "        df_vessels = df_vessels.drop(['vesselType', \"depth\", \"draft\", \"maxWidth\", \"rampCapacity\", \"yearBuilt\"], axis = 1)\n",
-    "        return df_vessels\n",
-    "\n",
-    "    def retrieve_tests(self,path):\n",
-    "        df_tests = pd.read_csv(path, sep=',')\n",
-    "        df_tests[\"time\"] = pd.to_datetime(df_tests[\"time\"])\n",
-    "        return df_tests\n",
-    "\n",
     "    def retrieve_training_data(self):\n",
     "        df_ais=self.retrieve_ais(self.folderpath+'/ais_train.csv')\n",
     "        df_ports=self.retrieve_ports(self.folderpath+'/ports.csv')\n",
-    "        # df_schedules=self.retrieve_schedules(self.folderpath+'/schedules_to_may_2024.csv')\n",
-    "        #df_vessels=self.retrieve_vessels(self.folderpath+'/vessels.csv')\n",
-    "        \n",
     "\n",
     "        result = df_ais\n",
     "        result = pd.merge(df_ais, df_ports, on='portId')\n",
-    "        #result = pd.merge(result, df_vessels, on='vesselId')\n",
-    "        # result = pd.merge(result, df_schedules, on=['vesselId', 'portId'])\n",
-    "        #result = result.drop(['portId'], axis = 1)\n",
-    "        \n",
     "\n",
     "        return result\n",
     "\n",
@@ -145,20 +146,16 @@
     "        \n",
     "        return result\n",
     "\n",
-    "\n",
-    "if __name__ == '__main__':\n",
-    "    parser = CSVParser()\n",
-    "    parser.retrieve_training_data()\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "parser = CSVParser(RESOURCE_FOLDER)\n"
+    "parser = CSVParser(RESOURCE_FOLDER)"
    ]
   },
   {
@@ -181,39 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def map_indexes_within_timewindow(df, time_col, timewindow):\n",
-    "\n",
-    "    index_map = {}    \n",
-    "\n",
-    "    within_window = deque()\n",
-    "    \n",
-    "\n",
-    "    for current_idx in range(len((df))):\n",
-    "        current_row = df.iloc[current_idx]\n",
-    "        current_time = current_row[time_col]\n",
-    "        \n",
-    "\n",
-    "        while within_window and (current_time - within_window[0][1] > timewindow):\n",
-    "            index_map[within_window[0][0]] = within_window[-1][0]\n",
-    "            within_window.popleft()\n",
-    "        \n",
-    "        if current_idx == df.index[-1]:\n",
-    "            for idx, _ in within_window:\n",
-    "                index_map[idx] = current_idx\n",
-    "        \n",
-    "\n",
-    "        within_window.append((current_idx, current_time))\n",
-    "    \n",
-    "    return index_map"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +195,7 @@
     "    j=0\n",
     "    for _, vessel_df in vessel_dfs:\n",
     "        j+=1\n",
-    "        loadBar.load_bar(len(vessel_dfs), j)\n",
+    "        load_bar(len(vessel_dfs), j)\n",
     "        \n",
     "        vessel_df = vessel_df.sort_values(by='time')\n",
     "        groups = vessel_df.groupby(pd.Grouper(key=\"time\", freq='5D'))\n",
@@ -280,7 +245,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "timedeltas=[timedelta(days=3),timedelta(days=2),timedelta(days=1)]"
+    "timedeltas=[timedelta(days=3),timedelta(days=1)]"
    ]
   },
   {
@@ -412,38 +377,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def categorize_navstat(toy_data):\n",
-    "    if \"navstat\" not in toy_data.columns:\n",
-    "        return None\n",
-    "    important_values = {0: \"OMW_E\", 1: \"Anchor\", 5: \"Moored\"}\n",
-    "\n",
-    "    # Create a new column with categories\n",
-    "    return_values = toy_data['navstat'].apply(lambda x: important_values.get(x, \"Other\"))\n",
-    "    return_values = pd.get_dummies(return_values, dummy_na=True, prefix='value')\n",
-    "    return_values.columns = [f\"navstat_{col}\" for col in return_values.columns]\n",
-    "    toy_data = toy_data.drop(columns = \"navstat\")\n",
-    "    toy_data = pd.concat([toy_data, return_values], axis = 1)\n",
-    "    return toy_data\n",
-    "\n",
-    "def categorize_rot(total_df):\n",
-    "    if \"rot\" not in total_df.columns:\n",
-    "        return None\n",
-    " \n",
-    "    rot_values = total_df[\"rot\"]\n",
-    "\n",
-    "    bins = [-127, -126, 0, 127, np.inf]\n",
-    "\n",
-    "    labels = [\"Port_T_S\", \"Port_T_L\", \"Star_T_L\", \"Star_T_S\"]\n",
-    "\n",
-    "    return_values = pd.cut(rot_values, bins = bins, labels = labels, right = False)\n",
-    "    return_values = pd.get_dummies(return_values, dummy_na=True, prefix='value')\n",
-    "    return_values.columns = [f\"rot_{col}\" for col in return_values.columns]\n",
-    "    total_df = total_df.drop(columns = \"rot\")\n",
-    "    total_df = pd.concat([total_df, return_values], axis = 1)\n",
-    "\n",
-    "\n",
-    "    return total_df\n",
-    "\n",
     "def numerize_UN_LOCODE(total_df):\n",
     "    if \"UN_LOCODE\" not in total_df.columns:\n",
     "        return None\n",
@@ -457,44 +390,6 @@
     "\n",
     "    return total_df\n",
     "\n",
-    "def numerize_vesselId(total_df):\n",
-    "    if \"vesselId\" not in total_df.columns:\n",
-    "        return None\n",
-    "    \n",
-    "    unique_values = total_df[\"vesselId\"].unique()\n",
-    "    unique_values_dict = {value: i for i, value in enumerate(unique_values)}\n",
-    "\n",
-    "    return_values = total_df[\"vesselId\"].map(unique_values_dict)\n",
-    "    total_df = total_df.drop(columns = \"vesselId\")\n",
-    "    total_df[\"vesselId_num\"] = return_values\n",
-    "\n",
-    "    return total_df\n",
-    "\n",
-    "def numerize_portId(total_df):\n",
-    "    if \"portId\" not in total_df.columns:\n",
-    "        return None\n",
-    "\n",
-    "    unique_values = total_df[\"portId\"].unique()\n",
-    "    unique_values_dict = {value: i for i, value in enumerate(unique_values)}\n",
-    "    \n",
-    "    return_values = total_df[\"portId\"].map(unique_values_dict)\n",
-    "    total_df = total_df.drop(columns = \"portId\")\n",
-    "    total_df[\"portId_num\"] = return_values\n",
-    "\n",
-    "    return total_df\n",
-    "\n",
-    "def numerize_shippingLineId(total_df):\n",
-    "    if \"shippingLineId\" not in total_df.columns:\n",
-    "        return None\n",
-    "\n",
-    "    unique_values = total_df[\"shippingLineId\"].unique()\n",
-    "    unique_values_dict = {value: i for i, value in enumerate(unique_values)}\n",
-    "    \n",
-    "    return_values = total_df[\"shippingLineId\"].map(unique_values_dict)\n",
-    "    total_df = total_df.drop(columns = \"shippingLineId\")\n",
-    "    total_df[\"shippingLineId_num\"] = return_values\n",
-    "\n",
-    "    return total_df\n",
     "    \n",
     "\n",
     "def numerize_ISO(total_df):\n",
@@ -508,42 +403,12 @@
     "    \n",
     "    total_df = total_df.drop(columns = \"ISO\")\n",
     "    total_df[\"ISO_num\"] = return_values\n",
-    "    return total_df\n",
-    "\n",
-    "def numerize_homePort(total_df):\n",
-    "    if \"homePort\" not in total_df.columns:\n",
-    "        return None\n",
-    "\n",
-    "    unique_values = total_df[\"homePort\"].unique()\n",
-    "    unique_values_dict = {value: i for i, value in enumerate(unique_values)}\n",
-    "    \n",
-    "    return_values = total_df[\"homePort\"].map(unique_values_dict)\n",
-    "    total_df = total_df.drop(columns = \"homePort\")\n",
-    "    total_df[\"homePort_num\"] = return_values\n",
-    "\n",
-    "    return total_df\n",
-    "\n",
-    "def type_dummies(total_df):\n",
-    "    if \"vesselType\" not in total_df.columns:\n",
-    "        return None\n",
-    "    return_values = pd.get_dummies(total_df[\"vesselType\"], dummy_na=True, prefix='value')\n",
-    "    return_values.columns = [f\"vesselType_{col}\" for col in return_values.columns]\n",
-    "    total_df = total_df.drop(columns = \"vesselType\")\n",
-    "    total_df = pd.concat([total_df, return_values], axis = 1)\n",
-    "    return total_df\n",
-    "\n",
-    "def minutes_to_etaParsed(total_df):\n",
-    "    if \"etaParsed\" not in total_df.columns or \"time\" not in total_df.columns:\n",
-    "        return None\n",
-    "    return_values = (total_df[\"etaParsed\"] - total_df[\"time\"]).dt.days\n",
-    "    total_df = total_df.drop(columns = \"etaParsed\")\n",
-    "    total_df[\"days_to_etaParsed\"] = return_values\n",
-    "    return total_df"
+    "    return total_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -558,10 +423,9 @@
    ],
    "source": [
     "feature_engineering_functions = [ \n",
-    "                                    numerize_UN_LOCODE, \n",
-    "                                 numerize_ISO, type_dummies\n",
+    "                                 numerize_UN_LOCODE, \n",
+    "                                 numerize_ISO\n",
     "                                 ] \n",
-    "#numerize_homePort,  apply_markov,, numerize_portId, numerize_shippingLineId, categorize_rot,categorize_navstat,numerize_vesselId,#minutes_to_etaParsed\n",
     "\n",
     "\n",
     "\n",
@@ -573,18 +437,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def replace_nan_with_zero(df):\n",
-    "    # Iterate over each column in the DataFrame\n",
     "    for col in df.columns:\n",
-    "        # Check if column contains NaN values\n",
     "        if df[col].isna().any():\n",
-    "            # Drop NaNs temporarily to check the data types of the rest of the values\n",
     "            non_na_values = df[col].dropna()\n",
-    "            # Check if all non-NaN values are either bool, float, or int\n",
     "            if non_na_values.apply(lambda x: isinstance(x, (bool, int, float))).all():\n",
     "                df[col].fillna(0, inplace=True)\n",
     "    return df\n",
@@ -594,13 +454,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "def remove_non_numeric_columns(df):\n",
-    "    # Select columns that are either of type bool, float, or int\n",
     "    df = df.select_dtypes(include=['bool', 'float', 'int'])\n",
     "    return df\n",
     "\n",
@@ -609,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +476,7 @@
     "\n",
     "    df = df_old.sample(frac=1).reset_index(drop=True)\n",
     "\n",
-    "    y_list = ['next_latitude', 'next_longitude'] #'next_latitude', 'next_longitude'\n",
+    "    y_list = ['next_latitude', 'next_longitude']\n",
     "    ys = df[y_list]\n",
     "    Xs = df.drop(columns = y_list)\n",
     "\n",
@@ -761,18 +620,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def split_dataframe(df):\n",
-    "    # Generate a unique ID for each row\n",
     "    df['ID'] = range(1, len(df) + 1)\n",
-    "    \n",
-    "    # Create the first DataFrame with ID, predicted_latitude, and predicted_longitude\n",
     "    df_predicted = df[['ID', 'latitude', 'longitude']].rename(columns={'latitude': 'predicted_latitude', 'longitude': 'predicted_longitude'})\n",
-    "    \n",
-    "    # Create the second DataFrame with ID, time, and vesselId\n",
     "    df_info = df[['ID', 'time', 'vesselId']]\n",
     "    \n",
     "    return df_predicted, df_info"
