--- a/src/Short_notebook_2.ipynb
+++ b/src/Short_notebook_2.ipynb
@@ -47,16 +47,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "from datetime import timedelta, datetime\n",
-    "from collections import deque\n",
     "import xgboost as xgb\n",
-    "from xgboost import plot_importance, plot_tree\n",
+    "from xgboost import plot_importance\n",
     "from sklearn.metrics import mean_absolute_error,mean_squared_error\n",
     "from sklearn.metrics import r2_score\n",
     "from warnings import simplefilter\n",
     "simplefilter(action=\"ignore\", category=pd.errors.PerformanceWarning)\n",
     "simplefilter(action=\"ignore\", category=FutureWarning)\n",
-    "simplefilter(action=\"ignore\", category=UserWarning)\n",
-    "from sklearn.model_selection import RandomizedSearchCV, TimeSeriesSplit"
+    "simplefilter(action=\"ignore\", category=UserWarning)"
    ]
   },
   {
@@ -265,70 +263,6 @@
    ],
    "source": [
     "total_df, last_rows = calculate_time_diffs_within_window(total_df, timedeltas) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "total_df.to_csv(RESOURCE_FOLDER+\"/time_diff_training_data.csv\", index=False)\n",
-    "last_rows .to_csv(RESOURCE_FOLDER+\"/time_diff_training_st.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "total_df = pd.read_csv(RESOURCE_FOLDER+\"/time_diff_training_data.csv\")\n",
-    "last_rows = pd.read_csv(RESOURCE_FOLDER+\"/time_diff_training_st.csv\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "total_df[\"time\"] = pd.to_datetime(total_df['time'])\n",
-    "total_df[\"etaParsed\"] = pd.to_datetime(total_df['etaParsed'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "last_rows[\"time\"] = pd.to_datetime(last_rows['time'])\n",
-    "last_rows[\"etaParsed\"] = pd.to_datetime(last_rows['etaParsed'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['vesselId', 'time', 'latitude', 'longitude', 'next_latitude',\n",
-      "       'next_longitude', 'time_diff', 'cog', 'sog', 'rot', 'heading',\n",
-      "       'navstat', 'portId', 'etaParsed', 'UN_LOCODE', 'ISO', 'portLongitude',\n",
-      "       'portLatitude'],\n",
-      "      dtype='object')\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(total_df.columns)"
    ]
   },
   {
@@ -724,15 +658,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = model.predict(X_test)\n",
-    "mae = mean_absolute_error(y_test, y_pred)\n",
-    "mse = mean_squared_error(y_test, y_pred)\n",
+    "\n",
+    "mae = mean_absolute_error(y_test, preds)\n",
+    "mse = mean_squared_error(y_test, preds)\n",
     "rmse = np.sqrt(mse)\n",
-    "r2 = r2_score(y_test, y_pred)\n",
+    "r2 = r2_score(y_test, preds)\n",
     "\n",
     "print(f\"MAE: {mae}\")\n",
     "print(f\"MSE: {mse}\")\n",
