--- a/src/Report.ipynb
+++ b/src/Report.ipynb
@@ -15,12 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt "
    ]
   },
   {
@@ -62,17 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "RESOURCE_FOLDER=\"../../resources\"\n",
-    "import pandas as pd"
+    "RESOURCE_FOLDER=\"../../resources\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -177,13 +178,12 @@
        "Index: []"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
     "df_ais = pd.read_csv(RESOURCE_FOLDER+'/ais_train.csv', sep='|')\n",
     "\n",
     "df_ais['time'] = pd.to_datetime(df_ais['time'])\n",
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +401,7 @@
     "\n",
     "We explored some individual features to find out if we could represent them in a clearer way for our models.\n",
     "\n",
-    "First we explored ROT, and we found out that ROT could perhaps be better represented as a catagorical described under. To check if this is a better representation (or that ROT is useful at all) we need to do feature engineering."
+    "First we explored rot, and we found out that rot could perhaps be better represented as a catagorical described under. To check if this is a better representation we did feature engineering."
    ]
   },
   {
@@ -456,6 +456,13 @@
     "sns.histplot(x = \"rot_cat\", data = toy_df)\n",
     "plt.title(\"Histogram of categorical ROT-values\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also explored navstat and found two ways that it can be represented as a categorical, as shown below. "
    ]
   },
   {
@@ -638,7 +645,7 @@
    "source": [
     "#### Cleaning up features\n",
     "\n",
-    "XGBoost doesn't accept input in any other form than floats, integers or booleans. For this reason date strings were turned into datetime objects and were eventually turned into time-difference in days or seconds. This became an especially pressing issue as we noticed that the eta did not feature years. We assumed that every year involved in this data was the year of 2024 since the dataset ends in the summer of 2024, and it no longers takes any ship more than half a year to reach any part of the globe.\n",
+    "XGBoost doesn't accept input in any other form than floats, integers or booleans. For this reason date strings were turned into datetime objects and were eventually turned into time-difference in days or seconds. This became an especially pressing issue as we noticed that the eta did not feature years. We assumed that every year involved in this data was the year of 2024 since the dataset ends in the summer of 2024, and it no longers takes any ship more than half a year to reach any part of the globe (look at the code below for how we fixed the issue).\n",
     "\n",
     "Strings were either categorized into integers or represented as dummies. This was especially relevant when we tried to make a LSTM model with Tensorflow as Tensorflow doesn't take anything else than floats.\n",
     "\n",
@@ -694,9 +701,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### LSTM\n",
+    "#### LSTM (Long-Short Term Memory) Neural Network\n",
     "\n",
-    "Our LSTM model was made with Tensorflow, and used on average data that went 8 hours into the past. This ended up failing though, as the Tensorflow model always predicted the same point on the face of the globe, regardless of parameters. We initially thought that this could be caused by features that weren't properly normalized, so we started writing normaliziation functions. However, the issue persissted and we had problems finding any satisfying solution. We ended up switching to XGBoost soon after."
+    "Our LSTM model was made with Tensorflow, and used on average data that went 8 hours into the past. This ended up failing though, as the Tensorflow model always predicted the same point on the face of the globe, regardless of parameters. We initially thought that this could be caused by features that weren't properly normalized, so we started writing normaliziation functions. However, the issue persissted and we had problems finding any satisfying solution. We ended up switching to XGBoost random forests soon after."
    ]
   },
   {
@@ -704,9 +711,7 @@
    "metadata": {},
    "source": [
     "#### XGBoost random forest\n",
-    "The random forest was an immediate improvement, that is, it tried to predict where the boat was going to be unlike our LSTM that just found the point on the earth that was closest to all the worlds boats.\n",
-    "\n",
-    "Due to XGBoost being made up of tree models, we could use the features without having to normalize them, unlike in our LSTM model."
+    "We used XGBoost random forest by using the Dmatrix-notation. The random forest was an immediate improvement, that is, it tried to predict where the boat was going to be unlike our LSTM that just found the point on the earth that was closest to all the worlds boats. Due to XGBoost being made up of tree models, we could use the features without having to normalize them, unlike in our LSTM model. In general we (almost) always used these features in our models: cog, sog, rot, heading, navstat, latitude, longitude, portLongitude, portLatitude, ISO, UN_LOCODE."
    ]
   },
   {
@@ -762,9 +767,7 @@
     "\n",
     "We tried to make navstat and rot categorical, and implemented them one at a time. Making navstat categorical gave us a better Kaggle score, while making rot categorical did not. So therefore we chose to not include rot categorical in our best models.\n",
     "\n",
-    "We also tried to use another categorizing system for navstat, by dividing into two categories: in movement and not in movement. This gave us a worse Kaggle result than using our first categorical navstat, so we did not use this new categorizing system. \n",
-    "\n",
-    "How rot and navstat were made categorical is shown in \"Exploring individual features\" in the EDA-part."
+    "We also tried to use another categorizing system for navstat, by dividing into two categories: in movement and not in movement. This gave us a worse Kaggle result than using our first categorical navstat, so we did not use this new categorizing system. "
    ]
   },
   {
@@ -789,7 +792,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Our two best models and the best supervised model"
+    "## Our two best models and the best supervised resampled random forest model with model interpretations"
    ]
   },
   {
@@ -803,56 +806,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our best model was the 5-day interval trained XGBoost random forest with the following Kaggle score: 148.93198. \n",
+    "Our best model was the 5-, 3- and 1-day interval trained XGBoost random forest with the following Kaggle score: 148.93198. \n",
     "\n",
-    "We used the following features: time, cog, sog, rot, heading, navstat, latitude, longitude, portLongitude, portLatitude, days_to_ETA, vesselType, ISO, UN_LOCODE and timedifference in seconds. We used the hyperparameters {10,0.5,30,0.7} and 30 boosting rounds with early stopping at 3. \n",
+    "We used the following features: cog, sog, rot, heading, navstat, latitude, longitude, portLongitude, portLatitude, ISO, UN_LOCODE and timedifference in seconds. We used the hyperparameters {10,0.5,30,0.7} and 30 boosting rounds with early stopping at 3. \n",
     "\n",
-    "The model interpretation showed that the most important features were days_to_ETA, latitude, longitude, ISO, UN_LOCODE and timedifference in seconds. This was interesting, since we had expected vesselType to be an important feature. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### The second best model and model interpretation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Our second best model was the 5-day interval trained XGBoost random forest with the following Kaggle score: 151.78732. \n",
-    "\n",
-    "We used the following features: time, cog, sog, rot, heading, navstat, latitude, longitude, portLongitude, portLatitude, days_to_ETA, vesselType, ISO, UN_LOCODE and timedifference in seconds. We used the hyperparameters {10,0.5,30,0.7} and 30 boosting rounds with early stopping at 3. \n",
-    "\n",
-    "The model interpretation showed that the most important features were days_to_ETA, latitude, longitude, ISO, UN_LOCODE and timedifference in seconds. This was interesting, since we had expected vesselType to be an important feature. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### The best supervised and resampled model and model interpretation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Our best supervised model was the resampled and supervised XGBoost random forest with the following Kaggle score: 171. \n",
-    "\n",
-    "This model used the features: time, cog, sog, rot, heading, navstat, latitude, longitude, portLongitude, portLatitude, vesselType, ISO, UN_LOCODE, timedifference in days and timedifference in seconds. This model used the hyperparameters {7, 0.4, 50, 0.6} and 30 boosting rounds with early stopping at 3. \n",
-    "\n",
-    "The model interpretation showed that the most important features were days_to_ETA, latitude, longitude, ISO, UN_LOCODE and timedifference in days. This was interesting, since we had expected vesselType to be an important feature.\n",
-    "\n",
-    "mdefinatw1.png\n",
-    "mde11simpe.png\n",
-    "model7.png"
+    "The feature importane plot (under here) shows that the most important features in our model is timedifference in seconds, cog, sog and heading. While less important features are navstat and ISO_NUM. These findings fits well with what we learned from searching domain knowlegde. While we are a bit suprised that navstat is not more important, as it tells if a vessel is moves and not moves. This may explain why feature engineering with navstat, i.e making it categorical, lead to worse test accuracy. It also makes sense that ISO_NUM is not such an important feature, because it basically tells the same information as UN_LOCODE_num which is recognized as more important. We are a bit suprised though that portLatitude, portLongitude and UN_LOCODE are not more important in the model, especially because our research into domain knowlegde claims that port features are very important.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -904,8 +868,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The second best model and model interpretation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our second best model was the 5-, 3-, 2- and 1-day interval trained XGBoost random forest with the following Kaggle score: 151.78732. \n",
+    "\n",
+    "We used the following features: cog, sog, rot, heading, navstat, latitude, longitude, portLongitude, portLatitude, days_to_ETA, vesselType, ISO, UN_LOCODE and timedifference in seconds. We used the hyperparameters {10,0.5,30,0.7} and 30 boosting rounds with early stopping at 3. \n",
+    "\n",
+    "The feature importane plot (under here) shows that the most important features in our model is timedifference in seconds, latitude, cog and longitude. While less important features are navstat and ISO_NUM. These findings fits well with what we learned from searching domain knowlegde, but we are a bit suprised that sog and heading are less important in this model. Other than what was mentioned, we have very similar interpretation of the less important features as in the feature importance plot the second best model. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -952,6 +934,24 @@
     "    plt.text(v + 1000, i, str(v), va='center')\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The best supervised and resampled model and model interpretation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Our best supervised and resampled XGboost random forest model has the following Kaggle score: 171.13932 \n",
+    "\n",
+    "This model used the features: cog, sog, latitude and longitude with 5 timeshifts (t, t-1, t-2, t-3, t-4), rot, heading, portLongitude, portLatitude, ISO, UN_LOCODE and navstat categorized into navstat_cat_moored, navstat_cat_OMW E, navstat_cat_anchor and navstat_cat_other. This model used the hyperparameters {7, 0.4, 50, 0.6} and 30 boosting rounds with early stopping at 3. \n",
+    "\n",
+    "There is a lot to talk about here, but this is not one of our two \"final\" models so we don't want to dip too deep. But note that latitude t-4 is more important than latitude t, this is odd. We would assume that the last timestep of latitude and longitude would be more important than timeshifts of latitude and longitude. This may indicate what we think is one of the main problems with this old model, and that is that the model gets too many features and may end up being confused about what features actually are important when we have very many features."
    ]
   },
   {
@@ -1023,20 +1023,6 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Model Interpretation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Feature importance plots"
    ]
   },
   {
